required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Add possibility to use KML_NAME_ITEM (#3728)

- Fixed mapfile parsing error when a label angle referenced an attribute 
  (e.g. ANGLE [angle]) #3727

- Removed executable flag on some source files (#3726)

- Fixed SQL Spatial to be able to use UniqueIdentifier field as unique key (#3722)

- Fix PHP Windows build (#3714)

- Fixed --with-opengl build issue: Look for OpenGL libs under /usr/lib64 as 
  well (#3724)


Version 6.0.0-beta1 (2011-03-09)
--------------------------------

- Fixed Core Dump from Format=KML/Z with Oracle Spatial layers (#3713)

- Call msPluginFreeVirtualTableFactory from msCleanup (#2164)

- Avoid the crash if anglemode 'FOLLOW' is specified with bitmap fonts. (#3379)

- Add argument check for processTemplate, processLegendTemplate and 
  processQueryTemplate in the C# bindings (#3699)

- Remove shapeObj.line, shapeObj.values, lineObj.point from the SWIG API 
  which are redundant and undocumented. (#3269)

- Remove map-oriented query modes (e.g. QUERYMAP). Use qformat parameter instead. (#3712)

- Implement single-pass query handling in mssql2008 driver as per RFC 65.

- Fixed Sql Server 2008 key column name truncation (#3654)

- Added label position binding (#3612) and label shadow size binding (#2924)

- Implement MS RFC 69: Support for clustering of features in point layers (#3700)

- Implement MS RFC 68: Support for combining features from multiple layers (#3674)

- Add support for WCS 1.1 Post (#3710)

- Fixed OGR query handling according to RFC 65 (#3647)

- Implement CLOSE_CONNECTION=ALWAYS to suppress the connection pooling
  for a particular layer.
